syntax = "proto3";

package user;

import "google/protobuf/timestamp.proto";

option go_package = "/user";

message User {
    string ID = 1;
    string username = 2;
    string password = 3;
    string password_hash = 4;
    string email = 5;
    string fullname = 6;
    google.protobuf.Timestamp created_at = 7;
}

message UserRequest {
    string ID = 1;
    string username = 2;
    string email = 3;
}

message Success {
    bool success = 1;
}

service UserService {
    rpc CreateUser (User) returns (Success) {};
    rpc GetUser (UserRequest) returns (User) {};
}